# doc-sql-audit

./: .gitignore  .mcp.json  CLAUDE.md  README.md  presentation.pptx  presentation_v0.pptx  pyproject.toml  task.txt  tools.yaml
scripts/: create_presentation.py
src/doc_sql_audit/: constants.py  generate_data.py
tests/: conftest.py  test_agent_mcp.py  test_audit_logic.py  test_schema.py
